<resources>
    <string name="app_name">News</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_one_title">one</string>
    <string name="tab_two_title">two</string>
    <string name="tab_three_title">three</string>
    <string name="tab_four_title">four</string>

    <string name="item_home">新闻</string>
    <string name="item_location">发现</string>
    <string name="item_like">Like</string>
    <string name="item_person">设置</string>

    <string name="update_notice_finish">下载完成，点击浏览</string>
    <string name="update_notice_nomemory">存储空间不足，请清理空间后，重新下载。</string>
    <string name="update_notice_error">下载过程中出错，请重新下载。</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

</resources>
